--- a/Data_Fusion_Base.ui
+++ b/Data_Fusion_Base.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>291</width>
+            <width>292</width>
             <height>378</height>
         </rect>
     </property>
@@ -30,7 +30,7 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>300</width>
+                <width>290</width>
                 <height>370</height>
             </rect>
         </property>
@@ -208,24 +208,21 @@
                 <class>QLabel</class>
                 <property stdset="1">
                     <name>name</name>
-                    <cstring>PixmapLabel1</cstring>
+                    <cstring>TextLabel1_2</cstring>
                 </property>
                 <property stdset="1">
                     <name>geometry</name>
                     <rect>
-                        <x>10</x>
-                        <y>21</y>
-                        <width>161</width>
-                        <height>150</height>
+                        <x>178</x>
+                        <y>4</y>
+                        <width>101</width>
+                        <height>40</height>
                     </rect>
                 </property>
                 <property stdset="1">
-                    <name>pixmap</name>
-                    <pixmap>image0</pixmap>
-                </property>
-                <property stdset="1">
-                    <name>scaledContents</name>
-                    <bool>true</bool>
+                    <name>text</name>
+                    <string>Choose  
+single sensor:</string>
                 </property>
             </widget>
             <widget>
@@ -238,10 +235,74 @@
                     <name>geometry</name>
                     <rect>
                         <x>180</x>
-                        <y>20</y>
+                        <y>50</y>
                         <width>96</width>
-                        <height>150</height>
+                        <height>110</height>
                     </rect>
+                </property>
+            </widget>
+            <widget>
+                <class>QPushButton</class>
+                <property stdset="1">
+                    <name>name</name>
+                    <cstring>PushButtonChooseS</cstring>
+                </property>
+                <property stdset="1">
+                    <name>geometry</name>
+                    <rect>
+                        <x>178</x>
+                        <y>163</y>
+                        <width>101</width>
+                        <height>30</height>
+                    </rect>
+                </property>
+                <property stdset="1">
+                    <name>text</name>
+                    <string>OK</string>
+                </property>
+            </widget>
+            <widget>
+                <class>QLabel</class>
+                <property stdset="1">
+                    <name>name</name>
+                    <cstring>PixmapLabel1</cstring>
+                </property>
+                <property stdset="1">
+                    <name>geometry</name>
+                    <rect>
+                        <x>10</x>
+                        <y>21</y>
+                        <width>161</width>
+                        <height>140</height>
+                    </rect>
+                </property>
+                <property stdset="1">
+                    <name>pixmap</name>
+                    <pixmap>image0</pixmap>
+                </property>
+                <property stdset="1">
+                    <name>scaledContents</name>
+                    <bool>true</bool>
+                </property>
+            </widget>
+            <widget>
+                <class>QLabel</class>
+                <property stdset="1">
+                    <name>name</name>
+                    <cstring>TextLabelSingleS</cstring>
+                </property>
+                <property stdset="1">
+                    <name>geometry</name>
+                    <rect>
+                        <x>8</x>
+                        <y>173</y>
+                        <width>161</width>
+                        <height>21</height>
+                    </rect>
+                </property>
+                <property stdset="1">
+                    <name>text</name>
+                    <string></string>
                 </property>
             </widget>
         </widget>
